--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: http://tmorrowdev.github.io/result-10/
+      url: https://tmorrowdev.github.io/result-10/
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
